--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <header id="header" class="fixed top-0 left-0 right-0 z-50 bg-background/80 backdrop-blur-sm transition-all duration-300">
         <div class="container mx-auto px-4 max-w-7xl">
             <nav class="flex items-center justify-between h-20">
-                <a href="#" class="text-2xl font-bold text-accent">Portfolio</a>
+                <!-- <a href="#" class="text-2xl font-bold text-accent">Portfolio</a> -->
                 <ul class="hidden md:flex items-center space-x-8 text-primary-text font-medium">
                     <li><a href="#home" class="hover:text-accent transition-colors">Home</a></li>
                     <li><a href="#about" class="hover:text-accent transition-colors">About</a></li>
