Updated index page for blogs

--- a/index.html
+++ b/index.html
@@ -880,11 +880,11 @@
                                 <span class="absolute top-4 right-4 bg-white/20 backdrop-blur text-white text-xs font-semibold px-2 py-1 rounded-full">Blog</span>
                             </div>
                             <div class="p-6 flex-grow flex flex-col">
-                                <h3 class="text-lg font-bold text-heading mb-2 card-title">Sample Blog Post Title</h3>
-                                <p class="text-sm text-gray-600 mb-4 flex-grow">Brief description of your blog post content goes here. This could be about data engineering concepts, tutorials, or insights.</p>
+                                <h3 class="text-lg font-bold text-heading mb-2 card-title">Convolutional Neural Network (CNN / ConvNet)</h3>
+                                <p class="text-sm text-gray-600 mb-4 flex-grow">A Convolutional Neural Network (CNN or ConvNet) is a deep learning model designed to process data with grid-like structures, such as images. It uses convolutional layers to automatically detect features like edges, shapes, and textures, pooling layers to reduce dimensionality, and fully connected layers for classification. CNNs are widely used in image recognition, computer vision, and related tasks.</p>
                                 <div class="flex items-center justify-between mt-auto">
-                                    <span class="text-xs text-gray-500">Jan 15, 2024</span>
-                                    <a href="https://babin411.github.io" target="_blank" class="inline-flex items-center gap-2 text-sm font-medium text-accent hover:text-accent-hover transition-colors">
+                                    <span class="text-xs text-gray-500">Dec 20, 2023</span>
+                                    <a href="https://babin411.github.io/posts/Convolutinal-Neural-Network/" target="_blank" class="inline-flex items-center gap-2 text-sm font-medium text-accent hover:text-accent-hover transition-colors">
                                         Read More
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
                                     </a>
@@ -901,11 +901,11 @@
                                 <span class="absolute top-4 right-4 bg-white/20 backdrop-blur text-white text-xs font-semibold px-2 py-1 rounded-full">Notion</span>
                             </div>
                             <div class="p-6 flex-grow flex flex-col">
-                                <h3 class="text-lg font-bold text-heading mb-2 card-title">Notion Page Title</h3>
-                                <p class="text-sm text-gray-600 mb-4 flex-grow">Description of your Notion page content. Could be documentation, notes, or comprehensive guides.</p>
+                                <h3 class="text-lg font-bold text-heading mb-2 card-title">Back Propagation</h3>
+                                <p class="text-sm text-gray-600 mb-4 flex-grow">Backpropagation is a learning algorithm used in neural networks to minimize error by adjusting weights. It works by propagating the error from the output layer backward through the network, calculating gradients using the chain rule, and updating weights with optimization methods like gradient descent. This process allows the model to learn and improve accuracy over time.</p>
                                 <div class="flex items-center justify-between mt-auto">
                                     <span class="text-xs text-gray-500">Dec 20, 2023</span>
-                                    <a href="https://babin411.notion.site" target="_blank" class="inline-flex items-center gap-2 text-sm font-medium text-accent hover:text-accent-hover transition-colors">
+                                    <a href="https://babin411.github.io/posts/Back-Propagation/" target="_blank" class="inline-flex items-center gap-2 text-sm font-medium text-accent hover:text-accent-hover transition-colors">
                                         View Page
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
                                     </a>
@@ -922,11 +922,11 @@
                                 <span class="absolute top-4 right-4 bg-white/20 backdrop-blur text-white text-xs font-semibold px-2 py-1 rounded-full">Tutorial</span>
                             </div>
                             <div class="p-6 flex-grow flex flex-col">
-                                <h3 class="text-lg font-bold text-heading mb-2 card-title">Python for Data Analysis</h3>
-                                <p class="text-sm text-gray-600 mb-4 flex-grow">Comprehensive guide to using Python for data analysis with pandas, numpy, and visualization libraries.</p>
+                                <h3 class="text-lg font-bold text-heading mb-2 card-title">Artificial Neural Network (ANN / MLP)</h3>
+                                <p class="text-sm text-gray-600 mb-4 flex-grow">An Artificial Neural Network (ANN) is a computational model inspired by the way biological neural networks in the human brain process information. ANNs consist of interconnected layers of nodes (neurons) that work together to recognize patterns and make decisions. They are widely used in various applications, including image and speech recognition, natural language processing, and more.</p>
                                 <div class="flex items-center justify-between mt-auto">
-                                    <span class="text-xs text-gray-500">Nov 10, 2023</span>
-                                    <a href="https://babin411.github.io" target="_blank" class="inline-flex items-center gap-2 text-sm font-medium text-accent hover:text-accent-hover transition-colors">
+                                    <span class="text-xs text-gray-500">Dec 20, 2023</span>
+                                    <a href="https://babin411.github.io/posts/Artificial-Neural-Network/" target="_blank" class="inline-flex items-center gap-2 text-sm font-medium text-accent hover:text-accent-hover transition-colors">
                                         Read More
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
                                     </a>
@@ -942,11 +942,11 @@
                                 <span class="absolute top-4 right-4 bg-white/20 backdrop-blur text-white text-xs font-semibold px-2 py-1 rounded-full">Tutorial</span>
                             </div>
                             <div class="p-6 flex-grow flex flex-col">
-                                <h3 class="text-lg font-bold text-heading mb-2 card-title">Anasdfaother Blog Post</h3>
-                                <p class="text-sm text-gray-600 mb-4 flex-grow">More content descriptions for your additional blog posts or tutorials.</p>
+                                <h3 class="text-lg font-bold text-heading mb-2 card-title">Python Decorators</h3>
+                                <p class="text-sm text-gray-600 mb-4 flex-grow">The post introduces how to wrap a function with additional behavior using decorators, without altering the original function’s code. It walks through creating wrapper functions via *args and **kwargs, stacking multiple decorators, handling methods (with self), and writing decorators that accept parameters. It also emphasizes keeping original function metadata using functools.wraps.</p>
                                 <div class="flex items-center justify-between mt-auto">
                                     <span class="text-xs text-gray-500">Nov 10, 2023</span>
-                                    <a href="https://babin411.github.io" target="_blank" class="inline-flex items-center gap-2 text-sm font-medium text-accent hover:text-accent-hover transition-colors">
+                                    <a href="https://babin411.github.io/posts/python9/" target="_blank" class="inline-flex items-center gap-2 text-sm font-medium text-accent hover:text-accent-hover transition-colors">
                                         Read More
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
                                     </a>
@@ -963,10 +963,10 @@
                                 <span class="absolute top-4 right-4 bg-white/20 backdrop-blur text-white text-xs font-semibold px-2 py-1 rounded-full">Deep Learning</span>
                             </div>
                             <div class="p-6 flex-grow flex flex-col">
-                                <h3 class="text-lg font-bold text-heading mb-2 card-title">Computer Vision with Deep Learning</h3>
-                                <p class="text-sm text-gray-600 mb-4 flex-grow">Advanced techniques in computer vision using CNNs and transfer learning for image recognition tasks.</p>
+                                <h3 class="text-lg font-bold text-heading mb-2 card-title">Python Closures</h3>
+                                <p class="text-sm text-gray-600 mb-4 flex-grow">The post introduces how to wrap a function with additional behavior using decorators, without altering the original function’s code. It walks through creating wrapper functions via *args and **kwargs, stacking multiple decorators, handling methods (with self), and writing decorators that accept parameters. It also emphasizes keeping original function metadata using functools.wraps.</p>
                                 <div class="flex items-center justify-between mt-auto">
-                                    <span class="text-xs text-gray-500">Oct 5, 2023</span>
+                                    <span class="text-xs text-gray-500">Nov 10, 2023</span>
                                     <a href="https://babin411.github.io" target="_blank" class="inline-flex items-center gap-2 text-sm font-medium text-accent hover:text-accent-hover transition-colors">
                                         Read More
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
